add counter players online
