# src/main/java/com/eleks/academy/whoami/model/response/PlayerSuggestion.java
@@ -2,6 +2,7 @@ package com.eleks.academy.whoami.model.response;
 
 import com.eleks.academy.whoami.core.SynchronousPlayer;
 
+import com.eleks.academy.whoami.model.request.CharacterSuggestion;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -14,16 +15,16 @@ import lombok.NoArgsConstructor;
 public class PlayerSuggestion {
 	
 	private String username;
-	
+
 	private String nickname;
 	
 	private String suggestion;
 	
-	public static PlayerSuggestion of(SynchronousPlayer player) {
+	public static PlayerSuggestion of(SynchronousPlayer player, CharacterSuggestion character) {
 		return PlayerSuggestion.builder()
 				.username(player.getUserName())
-				.nickname(player.getNickName())
-				.suggestion(player.getCharacterSuggestion())
+				.nickname(character.getNickname())
+				.suggestion(character.getCharacter())
 				.build();
 	}
 }
